minor changes and specs adjusted
